Fix posts list on small screens

--- a/rsc/less/bootstrap-evoskins.less
+++ b/rsc/less/bootstrap-evoskins.less
@@ -1099,3 +1099,10 @@ div.edit_toolbars, div.message_toolbars {
 		}
 	}
 }
+
+// Fix group button border radius for screens > xs size:
+@media (min-width: 768px) {
+	.panel_heading_action_icons .btn-group.dropdown.single-group-xs a.btn.btn-sm {
+		border-radius: 3px;
+	}
+}
